# Tarea_Corta-1

./: CMakeLists.txt  main.cpp
Logic/: Factory.cpp  Factory.h  Process.cpp  Process.h  Process_Maker.cpp  Process_Maker.h  Process_Manager.cpp  Process_Manager.h
Main/: main.cpp
Structures/: Car_Lane.cpp  Car_Lane.h  Lane.cpp  Lane.h  MainLane.cpp  MainLane.h  Node.cpp  Node.h  WaitingQueue.cpp  WaitingQueue.h
